--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                 <div class="timeline-item fade-in">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Армия США</h3>
+                        <h3>Армия RPM</h3>
                         <p class="position">Лейтенант</p>
                         <p class="duration">2 месяца</p>
                     </div>
@@ -607,4 +607,5 @@
     </script>
 </body>
 </html>
+
 
